# fb-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs
