[package]
name = "fb-api"
version = "0.1.2"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"
repository = "https://github.com/gameroasters/fb-rs"
license-file = "LICENSE"
keywords = ["facebook","authentication","graph"]
categories = ["web-programming","asynchronous"]
description = "Facebook Api abstraction for async rust"

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
hyper = { version = "0.14", features = ["client","http1"] }
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
url = "2.1"